Cambiado los nombres de las imagenes

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
   <section class="Ven_celebrar">
     <figure class="Img_fiesta">
-      <img src="/Img/Fiesta.jpg" alt="">
+      <img src="Img/Fiesta.jpg" alt="">
     </figure>
 
     <section class="Cumpleanos">
       <h1>Ven a festejar</h1>
       <br><br><br>
-    <img src="/Img/Imagen pastel.png" alt="">
+    <img src="Img/Imagen pastel.png" alt="">
       <br><br><br>
       <h1>Mi cumpleaños</h1>
       <br><br><br><br><br>
@@ -51,10 +51,10 @@
 
       <div class="Tarjetas">
         <figure class="Tarjetas_tarot">
-          <img src="/Img/Imagenes_tarot.jpg" alt="">
+          <img src="Img/Imagenes_tarot.jpg" alt="">
         </figure>
         <figure class="Tarjetas_tarot">
-          <img src="/Img/Imagen_tarot2.jpg" alt="">
+          <img src="Img/Imagen_tarot2.jpg" alt="">
         </figure>
       </div>
       <div class="hora">
