--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     src="https://kit.fontawesome.com/2ee0245f3d.js"
     crossorigin="anonymous"
   ></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="animate.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@1000&display=swap" rel="stylesheet"/>
-    <script src="wow.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <title>Patricia Chan</title>
     <link rel="icon" class="favicon"/>
 </head>
@@ -26,8 +27,8 @@
   </div>
 
   <section class="Ven_celebrar">
-    <figure class="Img_fiesta">
-      <img src="Img/Fiesta.jpg" alt="">
+    <figure class="Img_fiesta animate__fadeInDow">
+      <img class="Img_responsive" src="Img/Fiesta.jpg" alt="">
     </figure>
 
     <section class="Cumpleanos">
@@ -42,7 +43,7 @@
     </section>
 
     <section class="Lestras_22 degradado">
-      <br><br>
+      <br class="desaparecer"><br class="desaparecer">
       <div class="titulo1">
         <h1>¡Acompañame el Miercoles</h1>
         <h1 class="espacio">22 de Noviembre de 2023!</h1>
@@ -56,23 +57,33 @@
           <img src="Img/Imagen_tarot2.jpg" alt="">
         </figure>
       </div>
-      <div class="hora">
-        <h2>2 PM</h2>
+      <div class="Tarjetas2">
+          <img src="Img/Imagenes_tarot.jpg" alt="">
+          <br><br><br>
+          <img src="Img/Imagen_tarot2.jpg" alt="">
       </div>
-      <br><br>
+      
+      <br class="desaparecer"><br class="desaparecer">
       <div class="titulo2">
+        <div class="hora">
+          <h2>2 PM</h2>
+        </div>
+        <br>
         <h1>Dirección</h1>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3726.411702802988!2d-89.62004212553732!3d20.935975480690292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f56718fb03da633%3A0xc43a89d2ec86f56!2sC.%2048%20738%2C%20Cinco%20Colonias%2C%2097280%20M%C3%A9rida%2C%20Yuc.!5e0!3m2!1sen!2smx!4v1699562925671!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       
         <br><br>
     <section class="titulo2 Lestras_22">
-      <h1>Confirma tu</h1>
-      <h1 class="espacio2">asistencia</h1>
+      <h1>Confirma tu asistencia</h1>
       <br>
       <a  class="Confirmar" href="https://wa.me/+529999012218?text=Hola%20confirmo%20mi%20asistencia">Confirmar asistencia</a>
     </section>
     <br><br>
     </section>
 </body>
+<script>
+  new WOW().init();
+</script>
+
 </html>
