Agregue la nueva imagen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="wow animate__animated animate__slideInUp Cumpleanos">
       <h1>Ven a festejar</h1>
       <br><br><br>
-    <img src="Img/Imagen pastel.png" alt="">
+    <img src="Img/Pastel_bueno.jpeg" alt="">
       <br><br><br>
       <h1>Mi cumpleaños</h1>
       <br><br><br><br><br>
