Ya ultimos cambios

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <section class="Lestras_22 degradado">
       <br class="desaparecer"><br class="desaparecer">
       <div class="wow animate__animated animate__fadeInDown titulo1">
-        <h1>¡Acompañame el Miercoles</h1>
-        <h1 class="espacio">22 de Noviembre de 2023!</h1>
+        <h1>¡Acompañame el Martes</h1>
+        <h1 class="espacio">21 de Noviembre de 2023!</h1>
       </div>
 
       <div class="Tarjetas">
